--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
                 <title>Teste de branch</title>
 </head>
 <body>
-   <main>
       <header>
           <h1>Curso GitHub</h1>
       </header>
+      <main>
       <article>
                 <h2>Criação de branches</h2>
-                <p>Fazer branches (ramificações) em Git, especialmente no contexto do GitHub, significa criar versões separadas do seu código, permitindo que você trabalhe em diferentes features, correções de bugs ou experimentações sem afetar o código principal do projet</p>
+                <p>Fazer branches (ramificações) em Git, especialmente no contexto do GitHub, significa criar versões separadas do seu código, permitindo que você trabalhe em diferentes features, correções de bugs ou experimentações sem afetar o código principal do projeto.</p>
+
                 <h2>Isolamento</h2>
                 <p>Cada branch isola um determinado conjunto de alterações, impedindo que alterações em uma branch afetem outras.</p>
+
                 <h2>Desenvolvimento paralelo</h2>
                 <p>Vários desenvolvedores podem trabalhar em branches separados, permitindo um desenvolvimento mais paralelo e eficiente. </p>
+
                 <h2>Experimentação segura</h2>
                 <p>Você pode testar novas ideias e features sem o risco de quebrar o código principal. </p>
-                <h2>Fluxo de trabalho flexível:</h2>
-                 <p>O Git facilita o uso de diferentes fluxos de trabalho, como o Gitflow, que utilizam branches para organizar o desenvolvimento. </p>
-                <h2></h2>
+
+                <h2>Fluxo de trabalho flexível</h2>
+                <p>O Git facilita o uso de diferentes fluxos de trabalho, como o Gitflow, que utilizam branches para organizar o desenvolvimento. </p>
       </article>
    </main>          
 </body>
