--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h2>Fluxo de trabalho flexível</h2>
                 <p>O Git facilita o uso de diferentes fluxos de trabalho, como o Gitflow, que utilizam branches para organizar o desenvolvimento. </p>
       </article>
+      <img src="imagem/pexels-realtoughcandy-11035544.jpg" alt="image/jpg">
    </main>          
 </body>
 </html>
