--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <header>
-          <h1>Curso GitHub, Colocando em prática o uso de branch.</h1>
+          <h1>Curso GitHub, colocando em prática o uso de branch.</h1>
       </header>
       <main>
       <article>
