--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
                 <h2>Fluxo de trabalho flexível</h2>
                 <p>O Git facilita o uso de diferentes fluxos de trabalho, como o Gitflow, que utilizam branches para organizar o desenvolvimento. </p>
+                <img src="imagem/pexels-realtoughcandy-11035544.jpg" alt="image/jpg" class="conteudo.img">
       </article>
    </main>          
 </body>
