--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Teste de branch</title>
+                <link rel="shortcut icon" href="imagem/git.png" type="image/x-icon">
                 <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
       <header>
           <h1>Curso GitHub, colocando em prática o uso de branch.</h1>
       </header>
-      <main>
+    <main>
       <article>
                 <h2>Criação de branches</h2>
+                <img class="centro" src="imagem/git.png" alt="logo-branch" >
                 <p>Fazer branches (ramificações) em Git, especialmente no contexto do GitHub, significa criar versões separadas do seu código, permitindo que você trabalhe em diferentes features, correções de bugs ou experimentações sem afetar o código principal do projeto.</p>
 
                 <h2>Isolamento</h2>
@@ -26,7 +28,12 @@
 
                 <h2>Fluxo de trabalho flexível</h2>
                 <p>O Git facilita o uso de diferentes fluxos de trabalho, como o Gitflow, que utilizam branches para organizar o desenvolvimento.</p>
+               <div class="fork">
+                <img src="imagem/pexels-realtoughcandy-11035544.jpg" alt="pexels">
+               </div>
+               <img class="centro" src="imagem/github-octocat-logo-vector-download.jpg" alt="logo-git">
       </article>
-   </main>          
+   </main>
+     
 </body>
 </html>
